Styling fixes on layout spacing

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -20,11 +20,13 @@ h3 {
 h4 {
     font-size: 2rem;
     text-transform: uppercase;
+    line-height: 1.634;
 }
 
 p {
     font-size: 2.4rem;
     font-family: 'Lato', sans-serif;
+    line-height: 1.583;
 }
 a {
     text-decoration: none;
